template.yml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  InstanceType:
    Description: EC2 Instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - m4.large
      - t3.micro
  WebServerPortLimited:
    Default: 80
    Description: TCP/IP port for the web server
    Type: Number
    AllowedValues:
    - 80
    - 22
    - 443
  AccessKeyId:
    Description: Access Key ID
    Type: String
  SecretAccessKey:
    Description: Secret Access Key
    Type: String
  Region:
    Description: AWS Region
    Type: String
    Default: ap-northeast-1

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-06fdbb60c8e83aa5e
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          export AWS_ACCESS_KEY_ID=${AccessKeyId}
          export AWS_SECRET_ACCESS_KEY=${SecretAccessKey}
          export AWS_DEFAULT_REGION=${Region}

          # Download script from S3
          aws s3 cp s3://ec2-test-for-cloudformation/script.sh /home/ec2-user/script.sh

          # Download html file from S3
          aws s3 cp s3://ec2-test-for-cloudformation/index.html /var/www/html/

          # Grant execute permissions
          chmod +x /home/ec2-user/script.sh
          
          # Execute the script
          /home/ec2-user/script.sh

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0


Outputs:
  InstanceId:
    Description: InstanceId of the EC2 instance
    Value: !Ref EC2Instance
  PublicDNS:
    Description: Public DNSName of the EC2 instance
    Value: !GetAtt
            - EC2Instance
            - PublicDnsName
  PublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt 
            - EC2Instance
            - PublicIp
